# server/swagger.json
@@ -10,6 +10,7 @@
   "paths": {
     "/goals": {
       "post": {
+        "operationId": "createGoal",
         "tags": [
           "goals"
         ],
@@ -58,6 +59,7 @@
     },
     "/completions": {
       "post": {
+        "operationId": "createCompletion",
         "tags": [
           "goals"
         ],
@@ -100,6 +102,7 @@
     },
     "/pending-goals": {
       "get": {
+        "operationId": "getPendingGoals",
         "tags": [
           "goals"
         ],
@@ -185,7 +188,8 @@
                           "type": "number"
                         },
                         "total": {
-                          "type": "number"
+                          "type": "number",
+                          "nullable": true
                         },
                         "goalsPerDay": {
                           "type": "object",
@@ -211,7 +215,8 @@
                               ],
                               "additionalProperties": false
                             }
-                          }
+                          },
+                          "nullable": true
                         }
                       },
                       "required": [
@@ -235,6 +240,7 @@
     },
     "/auth/github": {
       "post": {
+        "operationId": "authenticateFromGithub",
         "tags": [
           "auth"
         ],
@@ -283,6 +289,7 @@
     },
     "/profile": {
       "get": {
+        "operationId": "getProfile",
         "tags": [
           "auth"
         ],
@@ -336,6 +343,7 @@
     },
     "/profile/gamification": {
       "get": {
+        "operationId": "getUserLevelAndExperience",
         "tags": [
           "users",
           "gamification"
